# weakincentives

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_CHECKLIST.md  AUDIT_REPORT.md  BOOK.md  CHANGELOG.md  CLAUDE.md  CODEBASE_SCAN.md  CODE_REVIEWER_EXAMPLE.md  COMPLEXITY_REDUCTION_PLAN.md  DATA_FLOW_BUG_REPORT.md  DOCUMENTATION_HANDOVER.md  EMBEDDING_TLA_SUMMARY.md  GEMINI.md  GLOSSARY.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_ROADMAP.md  IMPROVEMENT_SUMMARY.md  MODULE_BOUNDARIES_ANALYSIS.md  Makefile  POSITIONING.md  README.md  REFACTOR_LARGE_FILES.md  ROADMAP.md  SECURITY_ASSESSMENT.md  SPEC_GAPS.md  WARP.md  WINK_GUIDE.md  auth_debug_script.py  biome.json  bump-version.sh  bunfig.toml  check.py  code_reviewer_example.py  concat_all.py  hatch_build.py  install-hooks.sh  litellm_example.py  (+12 more)
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  deploy-marp.yml  detect-changes.yml  integration-tests.yml  presentation.yml  release.yml  verify.yml
book/: 01-philosophy.md  02-quickstart.md  03-prompts.md  04-tools.md  04.5-tool-policies.md  04.6-task-monitoring.md  05-sessions.md  06-adapters.md  07-main-loop.md  07.5-distributed-orchestration.md  08-evaluation.md  09-lifecycle.md  10-progressive-disclosure.md  11-prompt-optimization.md  12-workspace-tools.md  13-debugging.md  14-testing.md  15-code-quality.md  16-recipes.md  17-troubleshooting.md  18-api-reference.md  README.md  SPEC_COVERAGE.md  appendix-a-from-langgraph.md  appendix-b-from-dspy.md  appendix-c-formal-verification.md
debug_bundles/: README.md  f73d7129-3e5b-4bbb-9f5a-cec4e1a33ad1_20260129_013656.zip.sqlite
demo-skills/ascii-art/: SKILL.md
demo-skills/code-review/: SKILL.md
demo-skills/python-style/: SKILL.md
docs/: FORMAL_SPEC_GUIDE.md  PROMPT_OVERRIDES_METADATA_GAPS.md  REFACTORING_RECOMMENDATIONS.md  SLOW_TEST_INVESTIGATION.md  WORKER_DEPLOYMENT_ROADMAP.md  dbc-coverage-gaps.md  refactoring-opportunities.md  test-coverage-gaps.md
docs/plans/: production-readiness.md
examples/: __init__.py  common.py  formal_spec_example.py  litellm.py  litellm_runner.py  logging.py  openai.py  openai_runner.py  plan.py  planning_tools_demo.py  session.py  simple_tla_demo.py
formal-tests/: conftest.py  test_redis_mailbox.py  test_violation_detection.py
guides/: README.md  adapters.md  api-reference.md  claude-agent-sdk.md  code-quality.md  code-review-agent.md  concurrency.md  custom-sections.md  debugging.md  deployment.md  errors-and-exceptions.md  evaluation.md  experiments.md  feedback-providers.md  formal-verification.md  guardrails-and-feedback.md  guardrails.md  lease-extension.md  lifecycle.md  mailbox-and-dlq.md  mailbox.md  migration-from-dspy.md  migration-from-langgraph.md  module-boundaries.md  observability.md  orchestration.md  philosophy.md  progressive-disclosure.md  prompt-overrides.md  prompts.md  query.md  quickstart.md  recipes.md  resources.md  security.md  serialization.md  sessions.md  skills-authoring.md  task-completion.md  testing.md  (+6 more)
hooks/: pre-commit
integration-tests/: claude_agent_sdk_fixtures.py  conftest.py  redis_utils.py  sqs_utils.py  test_anthropic_adapter_integration.py  test_claude_agent_sdk_adapter_integration.py  test_claude_agent_sdk_integration.py  test_claude_agent_sdk_isolation_and_network.py  test_claude_agent_sdk_structured_output.py  test_claude_agent_sdk_text_and_tools.py  test_codex_app_server_adapter_integration.py  test_codex_evals_math_integration.py  test_codex_isolation_integration.py  test_codex_network_policy_integration.py  test_codex_progressive_disclosure_integration.py  test_codex_sandbox_integration.py  test_codex_transactional_tools_integration.py  test_evals_math_integration.py  test_filesystem_integration.py  test_google_gemini_adapter_integration.py  test_litellm_adapter_integration.py  test_openai_adapter_integration.py  test_opencode_acp_adapter_integration.py  test_package_structure.py  test_podman_shell.py  test_progressive_disclosure_integration.py  test_redis_mailbox_agent_loop.py  test_redis_mailbox_integration.py  test_redis_prompt_overrides.py  test_sqs_mailbox_integration.py  test_transactional_tools_integration.py
plans/: PROMPTS.md  TOOLS.md
posts/: the_prompt_is_the_agent.md
reviews/: SOLID_PRINCIPLES_REVIEW.md
scripts/: validate_clock_usage.py  validate_module_boundaries.py  validate_spec_references.py
snapshots/: README.md
specs/: ACK.md  ACP.md  ACP_ADAPTER.md  ADAPTERS.md  ADAPTER_IMPLEMENTATION.md  ADAPTER_STATE.md  AGENT_LOOP.md  AGENT_SKILLS.md  ANALYSIS_LOOP.md  ANTHROPIC_ADAPTER.md  ARCHITECTURE.md  ASSERTION_DENSITY.md  ASTEVAL.md  AWS_SQS_EVENT_BUS.md  BACKGROUND_AGENT.md  BUDGET.md  CHAPTERS.md  CHECKPOINTER.md  CLAUDE_AGENT_SDK.md  CLI.md  CLOCK.md  CODEX_APP_SERVER.md  CODEX_SDK.md  CONVERSATION_STATE.md  CORRELATION_CONTEXT.md  DATACLASSES.md  DATACLASS_SERDE.md  DBC.md  DEADLINES.md  DEBUGGING.md  DEBUG_BUNDLE.md  DECISION_LINEAGE.md  DECISION_TIME_GUIDANCE.md  DEPENDENCIES.md  DLQ.md  DSPY.md  DURABLE_EXECUTION.md  DYNAMIC_TOOLS.md  EFFECT_TRACKING.md  ELEGANT_ROBUST_DESIGN.md  (+163 more)
tests/: __init__.py  conftest.py  test_budget.py  test_clock.py  test_code_reviewer_example.py  test_dataclass_serialization.py  test_dbc_contracts.py  test_dbc_hypothesis.py  test_dbc_state_machine.py  test_deadlines.py  test_debug.py  test_events.py  test_example.py  test_examples_utilities.py  test_frozen_dataclasses.py  test_json_helpers.py  test_logging.py  test_openai_example.py  test_prompt_utils.py  test_session.py  test_session_core.py  test_session_dispatch.py  test_session_slices.py  test_session_snapshot.py  test_session_snapshots.py  test_session_thread_safety.py  test_standard_logging_subscribers.py  test_thread_safety.py
toolchain/: __init__.py  checker.py  output.py  parsers.py  result.py  runner.py  utils.py
tools/: run_bandit.py  run_deptry.py  run_mdformat.py
verify/: __init__.py  ast_utils.py  cli.py  core_types.py  git_utils.py  markdown_utils.py  output.py  paths.py  registry.py  runner.py
(+1592 files in other folders)
