[project]
name = "weakincentives"
dynamic = ["version"]
description = "Tools for developing and optimizing side effect free background agents"
readme = "llms.md"
authors = [
    { name = "Andrei Savu", email = "andrei@weakincentives.com" }
]
requires-python = ">=3.12"
dependencies = []
license = { text = "Apache-2.0" }
keywords = [
    "ai",
    "agents",
    "background-agents",
    "side-effect-free",
    "optimization",
    "weak-incentives",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://weakincentives.com/"
Documentation = "https://github.com/weakincentives/weakincentives#readme"
Repository = "https://github.com/weakincentives/weakincentives"
"Issue Tracker" = "https://github.com/weakincentives/weakincentives/issues"

[project.optional-dependencies]
asteval = [
    "asteval>=1.0.7",
]
openai = [
    "openai>=2.8.0",
]
litellm = [
    "litellm>=1.79.3",
]
podman = [
    "podman>=5.6.0",
]
wink = [
    "fastapi>=0.115.0",
    "markdown-it-py[linkify]>=4.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
wink = "weakincentives.cli.wink:main"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.+)"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "deptry>=0.24.0",
    "pytest>=9.0.1",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-rerunfailures>=16.1",
    "pip-audit>=2.9.0",
    "ruff>=0.14.5",
    "pyright>=1.1.407",
    "ty==0.0.1a26",
    "mdformat>=1.0.0",
    "mutmut>=3.1.0",
    "hypothesis>=6.100.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["test-repositories", "mutants"]

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "C90",
    "ANN",
    "RET",
    "RSE",
    "PTH",
    "ISC",
    "CPY",
    "A",
    "RUF",
    "TRY",
    "PLR",
    "PERF",
    "PT",      # pytest style
    "ERA",     # commented-out code
    "ARG",     # unused arguments
    "T20",     # print statements
    "PIE",     # misc lints
    "DTZ",     # datetime timezone
    "LOG",     # logging
    "TC",      # type-checking imports
    "SLOT",    # __slots__
    "FA",      # future annotations
    "FBT",     # boolean trap
    "FURB",    # refurb modernization
    "PLC",     # pylint convention
    "PLE",     # pylint error
    "PLW",     # pylint warning
]
extend-ignore = [
    "TRY003",   # long exception messages
    "TC006",    # runtime-cast-value (stylistic - quoting in cast())
    "TC001",    # move app imports to TYPE_CHECKING (invasive change)
    "TC002",    # move third-party imports to TYPE_CHECKING
    "TC003",    # move stdlib imports to TYPE_CHECKING
    "TC008",    # quote forward references
    "FBT001",   # boolean positional arg (legitimate API design)
    "FBT002",   # boolean default in function def
    "PLC0415",  # import outside top-level (intentional lazy imports)
    "PLC1901",  # compare to empty string (explicit is clearer than falsey check)
    "PLC2801",  # object.__setattr__ required for frozen dataclasses
    "PLC0105",  # TypeVar naming variance suffix (stylistic)
    "FURB110",  # ternary vs or operator (explicit is clearer)
    "FURB113",  # extend vs append (less readable with mixed logic)
    "FURB118",  # itemgetter vs lambda (lambda more readable)
    "FURB142",  # extend vs add loop (often less readable)
    "FURB189",  # subclassing str/dict (legitimate pattern)
    "PIE807",   # prefer dict over lambda (lambda can be intentional)
    "PLW0108",  # unnecessary lambda (can be intentional for lazy eval)
]
fixable = ["I001", "F401", "TC001", "TC002", "TC003", "FA100", "UP006", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["weakincentives"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Tests rely on readable inline status codes, simple fixtures, and helper signatures.
"tests/**" = [
    "PLR2004",  # magic values
    "PLR0913",  # too many arguments
    "PLR0914",  # too many locals
    "PLC2701",  # import-private-name (intentional for testing internals)
    "ARG001",   # unused-function-argument (fixtures, protocols)
    "ARG002",   # unused-method-argument
    "ARG004",   # unused-static-method-argument
    "ARG005",   # unused-lambda-argument (test stubs)
    "PT001",    # @pytest.fixture() vs @pytest.fixture
    "PT006",    # parametrize arg type
    "PT007",    # parametrize values type
    "PT011",    # pytest.raises too broad (acceptable in tests)
    "PT012",    # pytest.raises block single statement
    "PT013",    # import pytest style
    "PT018",    # composite assertion
    "PT019",    # fixture without value
    "PLW3201",  # custom dunder methods (__pre_init__, __validate__)
    "FBT001",   # boolean positional arg
    "FBT003",   # boolean positional value
    "DTZ001",   # naive datetime (intentional for testing validation)
    "DTZ005",   # datetime.now without tz (intentional for testing)
    "PLW1514",  # read_text/write_text without encoding (test files)
    "SLOT000",  # __slots__ in test classes
    "FURB156",  # hardcoded charset (test data)
]
"integration-tests/**" = [
    "PLR2004",  # magic values
    "PLC2701",  # import-private-name
    "ARG001",   # unused arguments
    "DTZ001",   # naive datetime
    "DTZ005",   # datetime.now without tz
    "PT018",    # composite assertion
]
# Example and CLI files use print() for user interaction
"code_reviewer_example.py" = ["T201", "ARG001"]
"src/weakincentives/debug.py" = ["FBT003"]
"src/weakincentives/cli/**" = ["T201"]
"src/weakincentives/prompt/overrides/validation.py" = ["PLR0913", "ARG001"]
"src/weakincentives/prompt/prompt.py" = ["PLR0913", "PLR6301"]
"src/weakincentives/prompt/protocols.py" = ["PLR0913"]
"src/weakincentives/prompt/progressive_disclosure.py" = ["ARG001"]
"src/weakincentives/adapters/core.py" = ["PLR0913", "PLR6301"]
"src/weakincentives/adapters/openai.py" = ["PLR0913"]
"src/weakincentives/dataclasses/__init__.py" = ["ARG001"]
"src/weakincentives/dbc/__init__.py" = ["PLR0913", "ARG001", "PLW0603"]
"src/weakincentives/prompt/_enabled_predicate.py" = ["PLR6201"]
"src/weakincentives/prompt/composition.py" = ["PLR6301"]
"src/weakincentives/prompt/markdown.py" = ["PLR0913"]
"src/weakincentives/prompt/rendering.py" = ["PLR6301"]
"src/weakincentives/prompt/section.py" = ["PLR0913", "PLR6301"]
"src/weakincentives/prompt/structured_output.py" = ["PLR0913"]
"src/weakincentives/prompt/tool_result.py" = ["PLR0911"]
"src/weakincentives/runtime/session/reducers.py" = ["ARG001"]
"src/weakincentives/serde/parse.py" = ["PLR0911", "PLR0912", "PLR0913", "PLR0914", "PLR0915"]
"src/weakincentives/serde/schema.py" = ["PLR0912", "PLR0914", "PLR0915", "PLR2004", "ARG001"]
"src/weakincentives/tools/asteval.py" = ["PLR0912", "PLR0914", "PLR0915", "PLR2004"]
"src/weakincentives/tools/planning.py" = ["PLR6301", "ARG001"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
# Custom dunder methods used by the library's dataclass system
allow-dunder-method-names = ["__pre_init__", "__validate__", "__post_validate__"]

[tool.ruff.lint.flake8-pytest-style]
raises-require-match-for = []  # Don't require match= for any exception types

[tool.ruff.lint.flake8-copyright]
notice-rgx = '''(?s)\A(?:#!/[^\n]+\n)?# Licensed under the Apache License, Version 2.0 \(the "License"\);
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

'''

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=src/weakincentives --cov-report=term-missing --cov-fail-under=100"
markers = [
    "integration: marks tests that exercise live provider integrations.",
    "timeout(timeout): set per-test timeout in seconds via pytest-timeout.",
    "threadstress: repeat tests under randomized thread-pool conditions.",
    "podman: marks tests that exercise the Podman tool against a live daemon.",
]
norecursedirs = ["test-repositories", ".uv-cache", ".venv"]
reruns = 2
reruns_delay = 0.5

[tool.mutmut]
paths_to_mutate = [
    "src/weakincentives/runtime/session/reducers.py",
    "src/weakincentives/runtime/session/session.py",
    "src/weakincentives/serde/dataclass_serde.py",
]
tests_dir = ["tests"]
do_not_mutate = [
    "snapshots/*",
    "tests/snapshots/*",
    "test-repositories/*",
    "integration-tests/*",
    "build/*",
    "dist/*",
    "src/weakincentives/prompt/**",
    "src/weakincentives/tools/**",
]
also_copy = ["code_reviewer_example.py", "test-repositories", "src/weakincentives"]
pytest_add_cli_args = [
    "-o",
    "addopts=",
    "--strict-config",
    "--strict-markers",
    "--no-cov",
    "--maxfail=1",
    "-q",
]
pytest_add_cli_args_test_selection = [
    "-o",
    "addopts=",
    "--strict-config",
    "--strict-markers",
    "--no-cov",
    "--maxfail=1",
    "-q",
]
mutate_only_covered_lines = true
debug = false

[tool.coverage.run]

[tool.deptry]

[tool.deptry.per_rule_ignores]
DEP002 = ["asteval", "litellm", "mcp", "openai", "pyyaml"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["src"]
exclude = [
    "test-repositories",
    ".git",
    ".uv-cache",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
    "dist",
]
deprecateTypingAliases = true
reportCallInDefaultInitializer = "error"
reportMissingTypeStubs = "error"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "error"
reportImportCycles = "error"
reportPrivateUsage = "error"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "error"
reportUnknownMemberType = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnreachable = "error"
reportUnusedCallResult = "error"
reportUnusedExpression = "error"

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
invalid-ignore-comment = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"
